--- a/EV_1.html
+++ b/EV_1.html
@@ -6,12 +6,11 @@
      <script src="http://aframe.io/releases/0.8.0/aframe.min.js"></script>
     </head>
     <body>
-      
+      <a-scene>
         <a-assets>
           <img id="MySky" crossorigin src="https://i.postimg.cc/Dw0Bdd5F/vecteezy-un-moderno-elegante-departamento-con-limpiar-parquet-piso-y-25490307.jpg">
         </a-assets>
-        <a-scene>
-          <a-sky src="#MySky"></a-sky>
+        <a-sky src="#MySky" radius="50"></a-sky>
 
         <a-box position="-1 1.25 -3" rotation="0 45 0" color="#0068ff"></a-box>
         <a-cylinder position="1 0 -3" radius="0.5" height="1.5" color="#5fa8ff"></a-cylinder>
