--- a/EV_3.html
+++ b/EV_3.html
@@ -7,12 +7,12 @@
     </head>
     <body>
       <a-scene>
-        <a-assets>
-          <img id="MySky" crossorigin src="https://i.postimg.cc/JhJtmkrZ/vecteezy-el-futurista-oficina-vestibulo-se-jacta-limpiar-acero-y-25489667.jpg">
-        </a-assets>
-        <a-sky src="#MySky"></a-sky>
-
-        <a-box position="0 2.25 -5" scale="1 1 1" color="#ffec5f"></a-box>
+        <a-sky color="#00091e"></a-sky>
+        <a-plane position="-1 -5 0" rotation="-90 0 0" width="10" height="7" color="#ffda00"></a-plane>  
+           <a-entity position="0 1.6 6">
+        <a-camera></a-camera>
+      </a-entity>
+        <a-box position="0 2.25 -5" scale="1 1 1" color="#939393"></a-box>
         <a-cylinder position="0 1 -5" scale="1 1 1" radius="0.5" height="1.5" color="#ffec5f"></a-cylinder>
         <a-sphere position="0 0 -5" scale="1 1 1" radius="1.25" color="#ffec5f"></a-sphere>
        </a-scene>
