--- a/EV_2.html
+++ b/EV_2.html
@@ -7,11 +7,9 @@
     </head>
     <body>
       <a-scene>
-        <a-assets>
-          <img id="MySky" crossorigin src="https://i.postimg.cc/x1RZcs6P/vecteezy-un-limpio-moderno-departamento-con-elegante-decoracion-y-25489634.jpg">
-        </a-assets>
-        <a-sky src="#MySky"></a-sky>
-
+        <a-sky color="#000000"></a-sky>
+        <a-plane position="0 0 0" rotation="-90 0 0" width="10" height="5" color="#aff2ff"></a-plane>  
+      </a-entity>
         <a-sphere position="-3 0.5 -1" radius="0.5" color="#ffd2ed"></a-sphere>
         <a-sphere position="-1 0.75 -1" radius="0.5" height="1.5" color="#ff83c7"></a-sphere>
         <a-sphere position="1 0.75 -1" radius="0.50" color="#ff0068"></a-sphere>
