--- a/EV_1.html
+++ b/EV_1.html
@@ -6,15 +6,18 @@
      <script src="http://aframe.io/releases/0.8.0/aframe.min.js"></script>
     </head>
     <body>
-      <a-scene>
-        <a-assets>
-          <img id="MySky" crossorigin src="https://i.postimg.cc/Dw0Bdd5F/vecteezy-un-moderno-elegante-departamento-con-limpiar-parquet-piso-y-25490307.jpg">
-        </a-assets>
-        <a-sky src="#MySky" radius="50"></a-sky>
-
-        <a-box position="-1 1.25 -3" rotation="0 45 0" color="#0068ff"></a-box>
-        <a-cylinder position="1 0 -3" radius="0.5" height="1.5" color="#5fa8ff"></a-cylinder>
-        <a-sphere position="0 2.25 -5" radius="1.25" color="#fcff3e"></a-sphere>
-       </a-scene>
+       <a-scene>
+        <a-sky color="#87CEEB"></a-sky>
+        <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#8ef985"></a-plane>
+      <!-- Cámara -->
+      <a-entity position="0 1.6 6">
+        <a-camera></a-camera>
+      </a-entity>
+      <a-cylinder position="0 0 0" radius="0.2" height="5" color="#0cea16"></a-cylinder>
+      <a-cylinder position="0 2.5 0" radius="0.6" height="1" color="#58f960"></a-cylinder>
+      <a-cylinder position="0 2 0" radius="0.4" height="1" color="#58f960"></a-cylinder>
+      <a-box position="0 3.5 0" width="1" height="0.1" depth="1" color="#00ff0c"></a-box>
+      <a-cylinder position="0 4.5 0" radius="0.2" height="2" color="#ff8500"></a-cylinder>
+      
    </body>
 <html>
