--- a/EV_1.html
+++ b/EV_1.html
@@ -1,15 +1,9 @@
 <html>
    <head>
-    <title>Hola, WebVR! - A-Frame</title>
-    <meta name="description" content="hello, WebVR! - A-Frame">
-     <!--con esta escript llamo-importo la libreria de A-Frame-->
      <script src="http://aframe.io/releases/0.8.0/aframe.min.js"></script>
     </head>
     <body>
-       <a-scene>
-        <a-sky color="#87CEEB"></a-sky>
-        <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#8ef985"></a-plane>
-      <!-- Cámara -->
+     <a-scene>
       <a-entity position="0 1.6 6">
         <a-camera></a-camera>
       </a-entity>
@@ -18,6 +12,8 @@
       <a-cylinder position="0 2 0" radius="0.4" height="1" color="#58f960"></a-cylinder>
       <a-box position="0 3.5 0" width="1" height="0.1" depth="1" color="#00ff0c"></a-box>
       <a-cylinder position="0 4.5 0" radius="0.2" height="2" color="#ff8500"></a-cylinder>
-      
+      <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#8ef985"></a-plane>
+      <a-sky color="#87CEEB"></a-sky>
+     </a-scene>
    </body>
 <html>
