--- a/EV_1.html
+++ b/EV_1.html
@@ -4,17 +4,11 @@
   </head>
   <body>
     <a-scene>
-        <a-sky color="#87CEEB"></a-sky>
-        <a-plane position="0 0 0" rotation="-90 0 0" width="100" height="100" color="#8ef985"></a-plane>
-        <!-- Cámara -->
-        <a-entity position="0 1.6 6">
-        <a-camera></a-camera>
-        </a-entity>
-        <a-cylinder position="0 0 0" radius="0.2" height="5" color="#0cea16"></a-cylinder>
-        <a-cylinder position="0 2.5 0" radius="0.6" height="1" color="#58f960"></a-cylinder>
-        <a-cylinder position="0 2 0" radius="0.4" height="1" color="#58f960"></a-cylinder>
-        <a-box position="0 3.5 0" width="1" height="0.1" depth="1" color="#00ff0c"></a-box>
-      <a-cylinder position="0 4.5 0" radius="0.2" height="2" color="#ff8500"></a-cylinder>
-  </a-scene>
+      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+      <a-sky color="#ECECEC"></a-sky>
+    </a-scene>
   </body>
 </html>
